--- a/learn-certs-pr/courses/ai-900t00.yml
+++ b/learn-certs-pr/courses/ai-900t00.yml
@@ -47,7 +47,12 @@ summary: |-
   #### Профиль аудитории
   Курс Azure AI Fundamentals предназначен для всех, кому интересно узнать о типах решений, которые делает возможными искусственный интеллект (AI), и о службах Microsoft Azure, которые можно использовать для их создания. Вам не нужно иметь какой-либо опыт использования Microsoft Azure, чтобы пройти этот курс, но предполагается базовый уровень знания компьютерных технологий и Интернета. Некоторые из понятий, рассматриваемых в курсе, требуют базового понимания математики, например, умения интерпретировать графики. Курс состоит из практических занятий, которые включают работу с данными и запуск кода, поэтому знание основополагающих принципов программирования будет полезно.
 prerequisitesSection: |-
-  Знакомство с компьютерами и использованием веб-браузера.
+  Для прохождения этого курса предварительная сертификация не требуется. Успешные учащиеся курса «Основы ИИ Azure» обладают некоторыми базовыми знаниями о вычислениях и концепциях Интернета и хотят использовать службы ИИ Azure.
+  
+  В частности&#58;
+  - Опыт использования компьютеров и Интернета.
+  - Интерес в отношении вариантов использования приложений ИИ и моделей машинного обучения.
+  - Желание учиться посредством практических исследований.
 outlineSection: |-
   ### Модуль 1: Введение в AI
   В этом модуле вы узнаете об общих видах использования искусственного интеллекта (AI) и различных типах рабочей нагрузки, связанной с AI. Затем вы изучите особенности и принципы разработки ответственного AI.
