--- a/learn-certs-pr/courses/az-120t00.yml
+++ b/learn-certs-pr/courses/az-120t00.yml
@@ -6,12 +6,12 @@ metadata:
 uid: course.az-120t00
 courseNumber: 'AZ-120T00-A'
 hoursToComplete: 96
+iconUrl: /media/learn/certification/course.svg
 skillsGained:
 - skill: Миграция и SAP HANA, S/4HANA, SAP NetWeaver в Azure
 - skill: Использование портала Azure, облачной оболочки, Azure PowerShell, интерфейса командной строки и диспетчера ресурсов
 - skill: Использование функций межсайтового подключения, включая пиринговое соединение VNet и соединения VNet-VNet
 - skill: Работа с Azure Active Directory (AAD) и Azure AD Connect
-iconUrl: /media/learn/certification/course.svg
 learningPartnersLink: https://www.microsoft.com/learning/partners.aspx
 locales:
 - en
@@ -31,17 +31,31 @@ summary: |-
 
   Этот курс предназначен для администраторов Azure, которые осуществляют миграцию и управление решениями SAP в Azure. Администраторы Azure управляют облачными службами, которые охватывают возможности хранения, сетей и вычислительных облаков, с глубоким пониманием каждой службы на протяжении всего жизненного цикла ИТ. Они принимают запросы конечных пользователей на новые облачные приложения и дают рекомендации относительно служб, которые следует использовать для достижения оптимальной производительности и масштаба, а также обеспечения, размера, контроля и корректировки ресурсов по мере необходимости Эта роль требует общения и согласования действий с поставщиками. Администраторы Azure должны обладать навыками работы с порталом Azure, а по мере повышения квалификации использовать PowerShell и интерфейс командной строки.
 prerequisitesSection: |-
-  - Администраторы и архитекторы решений Azure для SAP должны обладать глубокими знаниями приложений SAP, SAP HANA, S/4HANA, SAP NetWeaver, SAP BW, серверов OS для приложений SAP и баз данных.
-  -  Перед прохождением этого курса рекомендуется пройти курс Azure Administrator (AZ-103) или Azure Solutions Architect (AZ-300), а также по SAP HANA и Linux.
+  Учащиеся должны обладать глубокими знаниями о реализации, миграции и администрировании приложений SAP и опытом работы с операционными системами Linux, виртуализацией, облачной инфраструктурой, структурами хранения и сетевыми подключениями. В частности&#58;
+
+  Предварительный опыт&#58;
+
+  - Практический опыт работы с решениями Azure IaaS и PaaS, включая виртуальные машины, VNet, подсистемы балансировки нагрузки, хранилище (большие двоичные объекты, файлы, диски).
+  - Понимание локальных и облачных технологий виртуализации, включая&#58; виртуальные машины, виртуальные сети и виртуальные жесткие диски.
+  - Понимание конфигурации сети, включая TCP/IP, службу доменных имен (DNS), виртуальные частные сети (VPN), брандмауэры и технологии шифрования. 
+  - Понимание концепций Active Directory.
+  - Опыт со средами Linux/Unix. 
+  - Глубокие знания о приложениях SAP, SAP HANA, S/4HANA, SAP NetWeaver, SAP BW, серверы с ОС для приложений и баз данных SAP.
+  - Понимание развертывания и настройки SAP HANA. 
+  - Практический опыт с администрированием SAP HANA. 
+  Предварительные курсы (или эквивалентные знания и практический опыт)&#58;
+  - AZ-900 Azure Fundamentals 
+  - AZ-104 Azure Administrator
 outlineSection: |-
-  ### Модуль1&#58; Введение
-  Содержит обзор партнерства компаний SAP и Microsoft.
+  ### Модуль 1&#58; знакомство с Azure для рабочих нагрузок SAP
+  
+  Учащиеся узнают о партнерстве между Microsoft и SAP, ознакомятся с обзором Azure для рабочих нагрузок SAP и узнают общие термины и их значение.
 
-  ### Модуль 2&#58; Основы SAP в Azure
+  ### Модуль 2&#58; основы Azure для рабочих нагрузок SAP
+  
+  Содержит уроки о вычислениях Azure, хранилище Azure, сети Azure, службах удостоверений, управлении и управляемости.
 
-  Содержит краткие уроки по вычислениям Azure, хранилищу Azure, сетям Azure, SAP HANA для Azure (большие экземпляры), службам идентификации, управлению и управляемости, службам резервного копирования и защиты данных, а также службам миграции.
-
-  ### Модуль 3&#58; Сертифицированные предложения SAP в Azure
+  ### Модуль 3&#58; сертифицированные предложения SAP для Azure
 
   Содержит уроки по общим требованиям программы обучения (поддержка SAP в общедоступных облачных средах), параметры развертывания Azure для рабочих нагрузок SAP, поддержка конкретных продуктов SAP для Azure, поддержка операционной системы Azure для рабочих нагрузок SAP, поддержка хранилища Azure для рабочих нагрузок SAP, сетевая поддержка для SAP, поддержка баз данных для SAP, поддержка высокой доступности и аварийного восстановления для SAP, а также требования к мониторингу для SAP.
 
@@ -49,17 +63,13 @@ outlineSection: |-
 
   #### Лабораторная работа&#58; интерактивная лабораторная работа&#58; Реализация кластеризации Windows на виртуальных машинах Azure
 
-  ### Модуль 4&#58; SAP на эталонной архитектуре Azure
-
-  Содержит уроки по SAP NetWeaver с AnyDB, SAP S4 HANA и SAP HANA в Azure (большие экземпляры) на виртуальных машинах Azure.
-
-  ### Модуль 4&#58; SAP на эталонной архитектуре Azure
-
-  Содержит уроки по SAP NetWeaver с AnyDB, SAP S4 HANA и SAP HANA в Azure (большие экземпляры) на виртуальных машинах Azure.
+  ### Модуль 4&#58; эталонная архитектура Azure для рабочих нагрузок SAP
+  
+  Содержит уроки о SAP NetWeaver с AnyDB на виртуальных машинах Azure и SAP S4 HANA на виртуальных машинах Azure.
 
   ### Модуль 5&#58; Планирование внедрения решений SAP в Azure
     
-  Содержит уроки по вычислениям, сети и хранилищу виртуальной машины Azure. Кроме того, содержатся уроки по высокой доступности и аварийному восстановлению виртуальной машины Azure, резервному копированию виртуальной машины Azure, мониторингу виртуальной машины Azure, безопасности виртуальной машины Azure, а также по проверке подлинности и контролю доступа к виртуальной машины Azure.
+  Содержит уроки о параметрах вычислений, сети и хранилища виртуальных машин Azure, параметрах высокой доступности и аварийного восстановления виртуальных машин Azure, параметрах резервного копирования виртуальных машин Azure, параметрах мониторинга виртуальных машин Azure, параметрах безопасности виртуальных машин Azure, параметрах аутентификации и контроля доступа к виртуальным машинам Azure, вопросах лицензирования и поддержки виртуальных машин Azure и вопросах цен.
 
   ### Модуль 6&#58; Планирование миграции рабочих нагрузок SAP на Azure
     
@@ -67,25 +77,24 @@ outlineSection: |-
 
   ### Модуль 7&#58; Внедрение решений SAP на основе виртуальной машины Azure
     
-  Содержит уроки по методологиям развертывания виртуальных машин Azure, реализациям с одним экземпляром (2-уровневая или 3-уровневая), реализации HA SAP NetWeaver с AnyDB на виртуальных машинах Azure, реализации HA SAP HANA на виртуальных машинах Azure, настройке расширения расширенного мониторинга Azure для SAP и реализации AD и Azure AD на основе аутентификации.
+  Содержит уроки о методологиях развертывания виртуальных машин Azure, реализациях в единственном экземпляре (2 уровня и 3 уровня), реализации HA SAP NetWeaver с AnyDB на виртуальных машинах Azure, реализации HA SAP HANA на виртуальных машинах Azure, настройке расширения для расширенного мониторинга Azure для SAP, реализации AD и проверки подлинности на основе Azure AD.
 
-  ### Модуль 8&#58; Развертывание больших экземпляров HANA (HLI)
+   #### Лабораторная&#58; лабораторная онлайн&#58; реализация архитектуры SAP на виртуальных машинах Azure под управлением Linux
+
+  #### Лабораторная&#58; лабораторная онлайн&#58; реализация архитектуры SAP на виртуальных машинах Azure под управлением Windows
+  
+  ### Модуль 8&#58; SAP HANA на Azure (крупные экземпляры) (HLI)
     
-  Содержит занятие по внедрению больших экземпляров HANA (HLI).
-
-  ### Модуль 9&#58; Перенос рабочих нагрузок SAP в Azure
+  Содержит уроки об основах SAP HANA на Azure (крупные экземпляры) (HLI), сертифицированных предложениях HLI, примере архитектуры HLI, параметрах планирования HLI, планировании высокой доступности и аварийного восстановления HLI, параметрах резервного копирования HLI, параметрах безопасности HLI, лицензировании и поддержке HLI, реализации и развертывании HLI, управлении HLI, мониторинге HLI и устранении неполадок.
+  
+  ### Модуль 9&#58; перенос рабочих нагрузок SAP в Azure
     
-  Содержит уроки по вариантам миграции, методологиям DMO, вариантам облачной миграции и миграции очень большой базы данных в Azure.
-
-  #### Лабораторная работа&#58; интерактивная лабораторная работа&#58; реализация архитектуры SAP на виртуальных машинах Azure на базе Linux
-
-  #### Лабораторная работа&#58; интерактивная лабораторная работа&#58; реализация архитектуры SAP на виртуальных машинах Azure на базе Windows
-
-  ### Модуль 10&#58; Обслуживание SAP в Azure
-    
-  Содержит уроки по дистанционному управлению, выполнению резервного копирования и восстановления, обновлениям ОС и рабочей нагрузки, вертикальному и горизонтальному масштабированию и аварийному восстановлению (DR).
-
-  ### Модуль 11&#58; Мониторинг и устранение неполадок в SAP в Azure
-    
-  Содержит уроки по мониторингу виртуальных машин Azure, мониторингу SAP HANA в Azure (большие экземпляры) и интеграции решений SAP с облачными службами Microsoft.
-
+  Содержит уроки о вариантах переноса, методологии DMO, вариантах облачной миграции и переносе очень большой базы данных в Azure. 
+  
+  ### Модуль 10&#58; поддержка Azure для рабочих нагрузок SAP
+  
+  Содержит уроки об удаленном управлении, осуществлении резервного копирования и восстановления, изменениях параметров сети, обновлениях операционной системы и рабочих нагрузок, вертикальном и горизонтальном масштабировании и аварийном восстановлении.
+  
+  ### Модуль 11&#58; мониторинг Azure для рабочих нагрузок SAP и устранение неполадок
+  
+  Содержит уроки о мониторинге виртуальных машин Azure и устранении неполадок, поднятии вопросов на техническую поддержку.
