--- a/learn-certs-pr/courses/az-900t00.yml
+++ b/learn-certs-pr/courses/az-900t00.yml
@@ -26,7 +26,7 @@ products:
 exams:
 - uid: exam.az-900
 summary: |-
-  Этот двухдневный курс позволит получить базовые знания об облачных концепциях; основных службах Azure; безопасности, конфиденциальности, соответствии и доверии; и ценообразовании и поддержке Azure.
+  Этот двухдневный курс предоставит знания фундаментального уровня об основных понятиях Azure; основных службах Azure; основных решениях и инструментах управления; общей безопасности и безопасности сети; функциях управления, конфиденциальности и соответствия; управлении затратами и соглашениях об уровне обслуживания Azure.
   Примечание&#58; Этот курс дает студентам допуск и время в Azure для участия в практических занятиях. Если вам не требуется практический опыт, обратите внимание на курс AZ-900T01&#58; Microsoft Azure Fundamentals (1 день). Содержание обоих курсов соответствует предметной области экзамена AZ-900.
 
   #### Профиль аудитории
@@ -35,108 +35,101 @@ prerequisitesSection: |-
   Для прохождения этого курса не требуется никакой предварительной подготовки. Тем не менее, чем больше
   технических знаний у слушателей, тем лучше они будут понимать об облаке.
 outlineSection: |-
-  ### Модуль 1&#58; Облачные принципы
-  В этом модуле вы узнаете об облачных сервисах, типах облачных моделей и типах облачных сервисов.
+  ### Модуль 1&#58; описание основных понятий Azure
+  В этом модуле вас ждет общий обзор платформы Azure и ее возможностей, ознакомившись с которым вы получите надежный фундамент для прохождения доступных модулей по основам Azure.
   #### Уроки
-  - Зачем нужны облачные сервисы
-  - Типы облачных моделей
-  - Типы облачных сервисов
+  - Знакомство с основами Azure.
+  - Обсуждение фундаментальных понятий Azure.
+  - Описание основных архитектурных компонентов Azure.
 
   После завершения этого модуля студенты смогут следующее&#58;
-  - Определение облачных вычислений и их ключевых преимуществ.
-  - Объяснение публичных, частных и гибридных облачных моделей.
-  - Объяснение облачных сервисов IaaS, PaaS и SaaS.
+  - Понимать преимущества облачных вычислений в Azure и того, как они могут экономить время и деньги.
+  - Объяснять понятия вроде высокой доступности, масштабируемости, эластичности, оперативности и аварийного восстановления.
+  - Описывать основные архитектурные компоненты Azure, такие как подписки, группы управления и ресурсы. 
+  - Кратко формулировать понятия географического распределения, такие как регионы, пары регионов и зоны доступности Azure.
 
 
-  ### Модуль 2&#58; Основные службы Azure
-  В этом модуле вы узнаете об основных облачных архитектурных компонентах Azure, службах и продуктах Azure, решениях Azure и инструментах управления Azure.
+  ### Модуль 2&#58; описание основных служб Azure
+  Из этого модуля вы узнаете об основных службах Azure, таких как база данных Azure, вычисления Azure, хранилище Azure и сеть Azure.
   #### Уроки
-  - Основные архитектурные компоненты Azure
-  - Основные службы и продукты Azure
-  - Решения Azure
-  - Инструменты управления Azure
-
-
-  #### Лабораторная &#58; Пошаговое руководство&#58; Создание виртуальной машины
-
-  #### Лабораторная &#58; Пошаговое руководство&#58; Развертывание экземпляров контейнеров Azure
-
-  #### Лабораторная &#58; Пошаговое руководство&#58; Создание виртуальной подключение
-
-  #### Лабораторная &#58; Пошаговое руководство&#58; Создание хранилища blob-объектов
-
-  #### Лабораторная &#58; Пошаговое руководство&#58; Создание базы данных SQL
-
-  #### Лабораторная &#58; Пошаговое руководство&#58; Внедрение Azure IoT Hub
-
-  #### Лабораторная &#58; Пошаговое руководство&#58; Реализация Azure Functions
-
-  #### Лабораторная &#58; Пошаговое руководство&#58; Создание веб-приложения
-
-  #### Лабораторная &#58; Пошаговое руководство&#58; Создание виртуальной машины (VM) с шаблоном
-
-  #### Лабораторная &#58; Пошаговое руководство&#58; Создание виртуальной машины (VM) с PowerShell
-
-  #### Лабораторная &#58; Пошаговое руководство&#58; Создание виртуальной машины (VM) CLI
-  После завершения этого модуля студенты смогут следующее&#58;
-  - Определение основных архитектурных компонентов Azure, такие как регионы, географическое положение и группы ресурсов.
-  - Определение вариантов использования основных служб и продуктов Azure, таких как виртуальные машины и хранилище.
-  - Определение вариантов использования решений Azure, таких как Интернет вещей и Машинное обучение.
-  - Определение доступных инструментов управления Azure, таких как Azure PowerShell и CLI.
-
-
-  ### Модуль 3&#58; Безопасность, конфиденциальность, соответствие и доверие
-  В этом модуле вы узнаете о безопасности, идентификации, управлении, мониторинге, отчетности и стандартах Azure.
-  #### Уроки
-  - Безопасное подключение к сети
-  - Основные службы идентификации Azure
-  - Инструменты и функции безопасности
-  - Методологии управления Azure
-  - Мониторинг и отчетность
-  - Стандарты конфиденциальности, соответствия и защиты данных
-
-
-  #### Лабораторная &#58; Пошаговое руководство&#58; Безопасный сетевой трафик
-
-  #### Лабораторная &#58; Пошаговое руководство&#58; Внедрение хранилища ключей Azure
-
-  #### Лабораторная &#58; Пошаговое руководство&#58; Создание политики Azure
-
-  #### Лабораторная &#58; Пошаговое руководство&#58; Управление доступом с помощью RBAC
-
-  #### Лабораторная &#58; Пошаговое руководство&#58; Управление блокировками ресурсов
-
-  #### Лабораторная &#58; Пошаговое руководство&#58; Внедрение тегов ресурсов
-
-  #### Лабораторная &#58; Пошаговое руководство&#58; Изучение центра управления безопасностью
-  После завершения этого модуля студенты смогут следующее&#58;
-  - Описание параметров безопасного подключения к виртуальной сети, такие как группы безопасности сети.
-  - Описание параметров аутентификации и авторизации для удостоверений Azure.
-  - Описание случаев использования для Центра безопасности, хранилища ключей, защиты от угроз и защиты информации.
-  - Описание политики Azure и контроль доступа на основе ролей.
-  - Описание случаев использования Azure Monitor и Azure Service Health.
-  - Описание стандартов конфиденциальности, соответствия и защиты данных.
-
-
-  ### Модуль 4&#58; Ценообразование, соглашения об уровне обслуживания (SLA) и жизненный цикл служб в Azure
-  В этом модуле вы узнаете о подписках Azure, планировании и управлении затратами, вариантов поддержки, соглашениях об уровне обслуживания и жизненных циклах служб.
-  #### Уроки
-  - Подписки Azure
-  - Планирование и управление расходами
-  - Azure Service Level Agreements (SLA)
-  - Жизненный цикл службы в Azure
-
-
-  #### Лабораторная &#58; Пошаговое руководство&#58; Использование калькулятора цен Azure
-
-  #### Лабораторная &#58; Пошаговое руководство&#58; Использование калькулятора TCO Azure
-
-  #### Лабораторная &#58; Пошаговое руководство&#58; Вычисление составных соглашения об уровне обслуживания Azure
-
-  #### Лабораторная &#58; Пошаговое руководство&#58; Доступ к функциям Azure Preview
+  - Обзор базы данных и служб аналитики Azure.
+  - Обзор служб вычислений Azure.
+  - Обзор служб хранения Azure.
+  - Обзор сетевых служб Azure.
 
   После завершения этого модуля студенты смогут следующее&#58;
-  - Использование подписки Azure.
-  - Планирование и управление расходами.
-  - Описание соглашения об уровне обслуживания Azure.
-  - Объяснение жизненных циклов службы Azure.
+  - Понимать разнообразие служб, доступных на Azure, включая службы вычислений, сетевые службы, службы хранения и службы баз данных.
+  - Определять службы виртуализации, такие как виртуальные машины Azure, экземпляры контейнеров Azure и Azure Kubernetes.
+  - Сравнивать службы баз данных Azure, такие как Azure Cosmos DB, Azure SQL, база данных Azure для MySQL.
+  - Проверять сетевые ресурсы Azure, такие как виртуальные сети, шлюзы VPN и Azure ExpressRoute.
+  - Кратко описывать службы хранения Azure, такие как хранилище BLOB-объектов Azure, хранилище дисков Azure и хранилище файлов Azure.
+
+  ### Модуль 3&#58; описание основных решений и средств управления на Azure
+  Из этого модуля вы узнаете о машинном обучении ИИ, Azure DevOps, основах мониторинга, основах управления, основах бессерверных вычислений и основах Интернета вещей.
+  #### Уроки
+  - Выбор лучшей службы ИИ для ваших нужд.
+  - Выбор лучших инструментов для помощи организациям с созданием лучших решений.
+  - Выбор лучшей службы мониторинга для видимости, анализа и устранения сбоев.
+  - Выбор лучших средств для управления вашей средой Azure и ее настройки.
+  - Выбор лучшей бессерверной технологии Azure для вашего бизнес-сценария.
+  - Выбор лучшей службы Azure IoT для вашего приложения.
+
+  После завершения этого модуля студенты смогут следующее&#58;
+  - Выбирать правильные службы искусственного интеллекта Azure для решения различных видов бизнес-задач.
+  - Выбирать лучшие инструменты для процесса разработки программного обеспечения и службы для определенного бизнес-сценария.
+  - Выбирать правильную облачную службу мониторинга для решения различных видов бизнес-задач.
+  - Выбирать правильное средство управления Azure для удовлетворения различных технических потребностей.
+  - Выбирать правильную технологию бессерверных вычислений для вашего бизнес-сценария.
+  - Выбирать лучшую службу Azure IoT для определенного бизнес-сценария.
+
+  ### Модуль 4&#58; описание функций общей безопасности и функций безопасности сети
+  Из этого модуля вы узнаете, как защитить себя от угроз безопасности и обеспечить безопасность ваших сетей с помощью Azure.
+  #### Уроки
+  - Защита от угроз безопасности на Azure.
+  - Обеспечение безопасности сетевых соединений на Azure.
+
+  После завершения этого модуля студенты смогут следующее&#58;
+  - Повышать уровень безопасности и защищаться от угроз посредством использования центра безопасности Azure.
+  - Собирать данные безопасности и работать с данными безопасности из различных источников посредством использования Azure Sentinel.
+  - Управлять выделенными физическими серверами для размещения виртуальных машин Azure для Windows и Linux.
+  - Определять уровни, которые составляют стратегию *углубленной защиты*.
+  - Объяснять, как брандмауэр Azure позволяет контролировать, какой трафик разрешен для сети.
+  - Настраивать группы безопасности сети для фильтрации сетевого трафика, поступающего на ресурсы Azure и исходящего из них.
+  - Объяснять, как защита от атак DDoS Azure помогает защищать ресурсы Azure от атак DDoS.
+
+  ### Модуль 5&#58; описание функций удостоверения, управления, конфиденциальности и соответствия
+  Из этого модуля вы узнаете о службах удостоверения Azure; о том, как составить стратегию облачного управления; о стандартах конфиденциальности, соответствия и защиты данных на Azure.
+  #### Уроки
+  - Защита доступа к вашим приложениям с помощью использования служб удостоверения Azure.
+  - Разработка стратегии облачного управления на Azure.
+  - Обзор стандартов конфиденциальности, соответствия и защиты данных на Azure.
+
+  После завершения этого модуля студенты смогут следующее&#58;
+  - Объяснять разницу между аутентификацией и авторизацией.
+  - Описывать, как Azure Active Directory обеспечивает управление удостоверениями и доступом.
+  - Объяснять роль, которую играет единый вход (SSO), многофакторная проверка подлинности и условный доступ.
+  - Принимать организационные решения в отношении облачной среды с помощью использования CAF для Azure.
+  - Определять, кто может осуществлять доступ к облачным решениям, с помощью использования управления доступом на основе ролей Azure.
+  - Применять блокировку ресурса для предотвращения случайного удаления ресурсов Azure.
+  - Применять теги к ресурсам Azure, чтобы помогать описывать их цель.
+  - Контролировать то, как создаются ресурсы, и поводить аудит создания ресурсов с помощью использования политики Azure.
+  - Обеспечивать управление в масштабе для различных подписок Azure с помощью использования Azure Blueprints.
+  - Объяснять доступные на Azure типы предложений по обеспечению соответствия.
+  - Получить представление о нормативных стандартах и соблюдении регулятивных норм на Azure.
+  - Объяснять возможности Azure для государственных учреждений.
+
+  ### Модуль 6&#58; описание управления затратами и соглашений об уровне обслуживания Azure
+  Из этого модуля вы узнаете, как планировать затраты на Azure и управлять ими, как выбирать правильные службы Azure с учетом соглашений об уровне обслуживания и жизненного цикла службы.
+  #### Уроки
+  - Планирование затрат на Azure и управление ими.
+  - Выбор правильных служб Azure посредством изучения соглашений об уровне обслуживания и жизненного цикла службы.
+
+  После завершения этого модуля студенты смогут следующее&#58;
+  - Пользоваться калькулятором совокупной стоимости владения.
+  - Описывать различные способы покупки продуктов и служб Azure.
+  - Использовать калькулятор цен для оценки ежемесячных затрат на выполнение облачных рабочих нагрузок.
+  - Определение основных факторов, влияющих на общую стоимость и применять рекомендуемые практики для минимизации затрат.
+  - Описывать, что такое соглашение об уровне обслуживания (SLA) и почему SLA важны.
+  - Определять факторы, которые могут влиять на SLA, например, выбираемый уровень служб.
+  - Объединять SLA для вычисления составного SLA.
+  - Описывать жизненный цикл службы на Azure.
