--- a/learn-certs-pr/courses/az-900t01.yml
+++ b/learn-certs-pr/courses/az-900t01.yml
@@ -11,7 +11,7 @@ iconUrl: /media/learn/certification/course.svg
 skillsGained:
 - skill: Понимание общих концепций облачных вычислений
 - skill: Понимание основных служб, доступных в Microsoft Azure
-- skill: Понимание безопасности, конфиденциальности, соответствия и доверия с Microsoft Azure
+- skill: Понимать безопасность, конфиденциальность, соответствие и доверие с Microsoft Azure.
 - skill: Понимание ценообразования и моделей поддержки, доступных в Microsoft
 learningPartnersLink: https://www.microsoft.com/learning/partners.aspx
 locales:
@@ -39,7 +39,7 @@ summary: |-
   #### Профиль аудитории
   Этот курс подходит для руководителей программ и технических специалистов с общим опытом работы в сфере IT. Эти слушатели хотят узнать о наших предложениях, увидеть, как внедряются компоненты, и задать вопросы о продуктах и ​​функциях. Этот курс не является пропуском Azure и не обеспечивает время в классе, чтобы слушатели могли выполнять какие-либо практические действия. Студенты могут получить бесплатную пробную версию и следовать пошаговому руководству за пределами класса. Этот курс в основном включает лекцию и демонстрации. Этот курс поможет подготовить слушателей к экзамену AZ-900.
 prerequisitesSection: |-
-  Для прохождения этого курса не требуется никакой предварительной подготовки. Технический опыт в области IT не требуется, однако некоторые общие знания или опыт в области IT могли бы быть полезны.
+  Для прохождения этого курса нет предварительных требований. Технический опыт в области ИТ не требуется, но некоторые общие знания и опыт в области ИТ будет полезен.
 outlineSection: |-
   ### Модуль 1&#58; Облачные принципы
   В этом модуле вы изучите основные концепции облачных вычислений.
