--- a/learn-certs-pr/courses/da-100t00.yml
+++ b/learn-certs-pr/courses/da-100t00.yml
@@ -31,7 +31,15 @@ summary: |-
   #### Профиль аудитории
   Аудитория этого курса - профессионалы в области данных и специалисты по бизнес-аналитике, которые хотят научиться точно выполнять анализ данных с помощью Power BI. Этот курс также предназначен для тех, кто разрабатывает отчеты, которые визуализируют данные из технологий платформы данных, существующих как в облаке, так и локально.
 prerequisitesSection: |-
-  В дополнение к своему профессиональному опыту студенты, проходящие данное обучение, должны обладать техническими знаниями, эквивалентными информации, содержащейся в курсе «Основы Azure».
+  Успешные аналитики данных начинают эту роль с наличием опыта работы с данными в облаке.
+  
+  В частности&#58; 
+  - Понимание основных понятий, касающихся данных.
+  - Знания в области работы с реляционными данными в облаке.
+  - Знания в области работы с нереляционными данными в облаке.
+  - Знания в отношении понятий анализа данных и визуализации. 
+  
+  Вы можете выполнить предварительные требования и получить лучшее представление о работе с данными на Azure, пройдя перед этим курсом курс [«Основы данных Microsoft Azure»](/learn/certifications/azure-data-fundamentals).
 outlineSection: |-
   ### Модуль 1&#58; Начало работы с Microsoft Data Analytics
   Этот модуль рассказывает о различных ролях в пространстве данных, описывает важные роли и обязанности аналитиков данных, а также исследует структуру портфеля Power BI.
