--- a/learn-certs-pr/courses/dp-050t00.yml
+++ b/learn-certs-pr/courses/dp-050t00.yml
@@ -30,8 +30,15 @@ summary: |-
   Аудитория этого курса - специалисты по данным и архитекторы данных, которые хотят узнать о миграции технологий платформы данных, существующих в Microsoft Azure, и о том, как можно перенести и модернизировать существующие рабочие нагрузки на основе SQL.
   Вторичной аудиторией этого курса являются люди, которые управляют платформами данных или разрабатывают приложения, которые доставляют контент из существующих технологий платформ данных.
 prerequisitesSection: |-
-  В дополнение к своему профессиональному опыту работы с SQL Server слушатели, проходящие данный курс, должны обладать техническими знаниями, эквивалентными следующим курсам&#58;
-  - [Azure fundamentals](https://docs.microsoft.com/en-us/learn/modules/welcome-to-azure/)
+  Успешные учащиеся начинают эту роль с фундаментальными знаниями понятий облачных вычислений и профессиональным опытом реализации решений SQL.
+  
+  В частности&#58;
+  - Работа с рабочими нагрузками SQL и их поддержка. 
+  - Опыт работы с Azure, такой как развертывание ресурсов и управление ими.
+  
+  Для приобретения необходимых навыков перед прохождением курса пройдите следующее бесплатное онлайн-обучение&#58;
+  - [«Знакомство с Azure SQL»](/learn/modules/azure-sql-intro/)
+  - [«Основы Azure»](/learn/certifications/azure-fundamentals)
 outlineSection: |-
   ### Модуль 1&#58; Введение в модернизацию платформы данных
   В этом модуле раскрывается цель модернизации платформы данных и рассказывается о выгоде, которую модернизация платформы данных может принести организации. Затем слушатели изучат различные этапы проектов миграции платформы данных, чтобы понять, что входит в каждый этап, чтобы максимально увеличить шансы на успешные проекты модернизации платформы данных. И, наконец, студенты изучат различные пути миграции данных, чтобы понять, чем отличается каждый подход и почему следует предпочесть один подход миграции другому.
