--- a/learn-certs-pr/courses/dp-060t00.yml
+++ b/learn-certs-pr/courses/dp-060t00.yml
@@ -26,8 +26,16 @@ summary: |-
   #### Профиль аудитории
   Основная аудитория этого курса - разработчики баз данных, которые планируют перенести свои рабочие нагрузки MongoDB или Cassandra DB в Azure с использованием Cosmos DB.
 prerequisitesSection: |-
-  В дополнение к своему профессиональному опыту студенты, которые проходят это обучение, должны уже иметь следующие технические знания&#58;
-  - Основные принципы разделения, репликации и управления ресурсами для создания и настройки масштабируемых приложений NoSQL, которые не зависят от API-интерфейса Cosmos DB.
+  Успешные учащиеся начинают эту роль с фундаментальными знаниями понятий облачных вычислений и профессиональным опытом в настройке приложений NoSQL.
+  
+  В частности&#58;
+  - Фундаментальные понятия секционирования, репликации и управления ресурсами для создания и настройки масштабируемых приложений NoSQL, которые не учитывают API Cosmos DB. 
+  - Опыт работы с Azure, такой как развертывание ресурсов и управление ими.
+  
+  Для приобретения необходимых навыков перед прохождением курса пройдите следующее бесплатное онлайн-обучение&#58;
+  - [«Основы данных Azure»](/learn/certifications/azure-data-fundamentals)
+  - [«Основные облачные службы: варианты вычислений Azure»](/learn/modules/intro-to-azure-compute/)
+  - [«Примеры использования: базы данных NoSQL и хранение объекта облака](/learn/modules/cmu-case-study-nosql-databases/)
 outlineSection: |-
   ### Модуль 1&#58; Создание глобально распределенных приложений с помощью Cosmos DB
   Этот модуль описывает преимущества и архитектуру Cosmos DB.
