--- a/learn-certs-pr/courses/dp-070t00.yml
+++ b/learn-certs-pr/courses/dp-070t00.yml
@@ -26,8 +26,17 @@ summary: |-
   Основная аудитория этого курса - разработчики баз данных, которые планируют перенос своих рабочих нагрузок MySQL или Postgres DB на Azure SQL DB.
   Вторичной аудиторией этого курса являются администраторы MySQL/Postgres, которым необходимо повысить осведомленность о возможностях и преимуществах Azure SQL DB.
 prerequisitesSection: |-
-  В дополнение к своему профессиональному опыту студенты, которые проходят это обучение, должны уже иметь следующие технические знания&#58;
-  - Некоторое знание систем управления реляционными базами данных с открытым исходным кодом, таких как Postgres и/или MySQL, администрирование SQL, методы резервного копирования и восстановления, то есть дамп данных таблицы
+  Успешные учащиеся начинают эту роль с фундаментальными знаниями понятий облачных вычислений и опытом работы с системами управления реляционными базами данных с открытым кодом.  
+  В частности&#58;
+  - Работа с PostgreSQL и/или MySQL.
+  - Использование техник резервного копирования и восстановления с открытыми данными.
+  - Администрирование SQL. 
+  
+  Для приобретения необходимых навыков перед прохождением курса пройдите следующее бесплатное онлайн-обучение&#58;
+  - [«Основные облачные службы: варианты вычислений Azure»](/learn/modules/intro-to-azure-compute/),
+  - [«Развертывание MariaDB, MySQL и PostgreSQL на Azure»](/learn/modules/deploy-mariadb-mysql-postgresql-azure/),
+  - [«Знакомство с Azure SQL»](/learn/modules/azure-sql-intro/),
+  - [«Знакомство с миграцией базы данных с открытым кодом в Azure Cosmos DB»](/learn/modules/introduction-open-source-database-migration-azure-cosmos-db/).
 outlineSection: |-
   ### Модуль 1&#58; Миграция в базу данных SQL Azure для MySQL и PostgreSQL
   Этот модуль описывает преимущества и архитектуру Azure SQL DB.
