--- a/learn-certs-pr/courses/dp-100t01.yml
+++ b/learn-certs-pr/courses/dp-100t01.yml
@@ -26,10 +26,18 @@ summary: |-
   #### Профиль аудитории
   Этот курс предназначен для специалистов по данным и тех, кто несет значительную ответственность за обучение и развертывание моделей машинного обучения.
 prerequisitesSection: |-
-  Перед посещением этого курса студенты должны иметь&#58;
-  - Earned [Azure Fundamentals certification](https://docs.microsoft.com/learn/certifications/azure-fundamentals).
-  - Понимание data science, в том числе знание процесса подготовки данных, обучения моделей и оценки конкурирующих моделей, для того, чтобы выбрать лучшую.
-  - Умение программировать на языке программирования Python и использовать библиотеки Python&#58; pandas, scikit-learn, matplotlib и seaborn.
+  Успешные специалисты по обработке данных Azure начинают эту роль с фундаментальными знаниями понятий облачных вычислений и опытом работы с общей обработкой и анализом данным, а также инструментами и техниками машинного обучения.
+  
+  В частности&#58;
+  - Создание облачных ресурсов на Microsoft Azure.
+  - Использование Python для изучения и визуализации данных.
+  - Обучение и проверка моделей машинного обучения с использованием типовых платформ вроде Scikit-Learn, PyTorch и TensorFlow.
+  
+  Для приобретения необходимых предварительных навыков перед прохождением курса пройдите следующее бесплатное онлайн-обучение&#58;
+  - [«Обзор облачных концепций Microsoft»](/learn/paths/explore-microsoft-azure-cloud-concepts/)
+  - [«Создание моделей машинного обучения»](/learn/paths/create-machine-learn-models/)
+  
+  Если вы только начинаете знакомиться с обработкой и анализом данных и машинным обучением, пожалуйста, сначала пройдите курс [«Основы ИИ Microsoft Azure»](/learn/certifications/azure-ai-fundamentals).
 outlineSection: |-
   ### Модуль 1&#58; Работа с данными в Azure
   Слушатели узнают о data science и роли Data Scientist.  Затем эти знания понадобятся, чтобы понять, как службы Azure могут поддерживать и расширять процесс обработки данных.
