--- a/learn-certs-pr/courses/dp-300t00.yml
+++ b/learn-certs-pr/courses/dp-300t00.yml
@@ -35,9 +35,16 @@ summary: |-
   #### Профиль аудитории
   Слушателями этого курса являются профессионалы в области данных, управляющие данными и базами данных, которые хотят узнать об администрировании технологий платформы данных, доступных в Microsoft Azure. Этот курс также полезен для архитекторов данных и разработчиков приложений, которым необходимо понять, какие технологии доступны для платформы данных с Azure и как работать с этими технологиями через приложения.
 prerequisitesSection: |-
-  Слушатели данного курса помимо профессионального опыта должны обладать техническими знаниями, эквивалентными следующим курсам&#58;
-  - Azure Fundamentals
-  - Azure Data Fundamentals
+  Успешные администраторы баз данных Azure начинают эту роль с профессиональным опытом в управлении базами данных и техническими знаниями облачных технологий.
+  
+  В частности&#58;
+  - Работа с SQL Server, поддержка и развертывание с SQL Server.
+  - Опыт работы с Azure, такой как развертывание ресурсов и управление ими. 
+  
+  Перед прохождением курса вы должны как минимум приобрести знания, которые даются во время следующего онлайн-обучения&#58;
+  - [Знакомство с Azure SQL](/learn/modules/azure-sql-intro/)
+  - [Azure Fundamentals](/learn/certifications/azure-fundamentals)
+  - [Azure Data Fundamentals](/learn/certifications/azure-data-fundamentals) 
 outlineSection: |-
   ### Модуль 1&#58; Роль администратора базы данных Azure (Azure Database Administrator)
   Этот модуль изучает роль администратора базы данных в мире Azure. Он также содержит фундаментальные данные, относящиеся к общему содержимому. Сюда входит обзор различных решений на основе SQL Server (SQL Server в виртуальной машине, управляемые экземпляры и база данных SQL Azure). Слушатели узнают, почему уровень совместимости является ключевым понятием при работе с базами данных SQL в Azure. Также слушатели знакомятся с другими платформами баз данных, доступными в Azure, в дополнение к платформам, основанным на SQL Server, в частности PostgreSQL и MySQL. 
