--- a/learn-certs-pr/courses/dp-900t00.yml
+++ b/learn-certs-pr/courses/dp-900t00.yml
@@ -29,6 +29,13 @@ summary: |-
 
   #### Профиль аудитории
   Аудитория этого курса - это люди, которые хотят изучить основы концепций баз данных в облачной среде, получить базовые навыки работы с облачными службами данных и получить базовые знания об облачных службах данных в Microsoft Azure.
+prerequisitesSection: |-
+  Для прохождения этого курса предварительная сертификация не требуется. Успешные учащиеся курса «Основы данных Azure» обладают некоторыми базовыми знаниями о вычислениях и концепциях Интернета и хотят анализировать информацию, получаемую из данных.
+  
+  В частности&#58; 
+  - Опыт использования веб-браузера, такого как [Microsoft Edge](https://support.microsoft.com/microsoft-edge?ocid=DMC-End-User-Support&ui)
+  - Знания основных связанных с данными концепций, например, работы с таблицами данных в электронной таблице и визуализацией данных с использованием диаграмм
+  - Желание учиться посредством практических исследований
 outlineSection: |-
   ### Модуль 1&#58; Основные концепции данных
   Слушатели узнают об основах концепций баз данных в облачной среде, получат базовые навыки работы с облачными службами данных и получат базовые знания об облачных службах данных в Microsoft Azure. Слушатели будут определять и описывать основные концепции данных, такие как реляционные, нереляционные, большие данные и аналитика, а также изучать, как эта технология реализуется в Azure. Слушатели изучат роли, задачи и обязанности в мире данных.
