--- a/learn-certs-pr/d365-finance-and-operations-apps-developer-associate.yml
+++ b/learn-certs-pr/d365-finance-and-operations-apps-developer-associate.yml
@@ -15,7 +15,7 @@ levels:
 skills:
 - Использование общих инструментов функциональности и внедрения
 - Настройка безопасности, процессов и параметров
-- Выполнение миграции данных
+- Управлять данными приложений Finance and Operations. 
 - Валидация и поддержка решений
 - Планирование архитектуры и проектирование решения
 - Применение инструментов разработчика
