--- a/learn-certs-pr/d365-functional-consultant-financials.yml
+++ b/learn-certs-pr/d365-functional-consultant-financials.yml
@@ -15,12 +15,12 @@ levels:
 skills:
 - Использование общих инструментов функциональности и внедрения
 - Настройка безопасности, процессов и параметров
-- Выполнение миграции данных
+- Управлять данными приложений Finance and Operations.
 - Валидация и поддержка решений
 - Установка и настройка финансового управления
-- Управление и применение общих процессов
-- Внедрение и управление кредиторской и дебиторской задолженностью
-- Управление бюджетированием и основными средствами
+- Реализовывать кредиторскую задолженность и расходы и управлять ими. 
+- Реализовывать дебиторскую задолженность, кредит, сборы и признание дохода. 
+- Управлять бюджетированием и основными средствами.
 roles:
 - functional-consultant
 type: role-based
