--- a/learn-certs-pr/d365-functional-consultant-manufacturing.yml
+++ b/learn-certs-pr/d365-functional-consultant-manufacturing.yml
@@ -15,11 +15,12 @@ levels:
 skills:
 - Использование общих инструментов функциональности и внедрения
 - Настройка безопасности, процессов и параметров
-- Выполнение миграции данных
+- Управлять данными приложений Finance and Operations
 - Валидация и поддержка решений
-- Установка и настройка производства
-- Создание и управление производственными и экономичными заказами
-- Создание, обработка и управление производственными групповыми заказами
+- Настраивать Dynamics 365 Supply Chain Management, Manufacturing
+- Управлять производственными процессами
+- Реализовывать сводное планирование для производства
+- Реализовывать другие производственные функции
 roles:
 - functional-consultant
 type: role-based
