--- a/learn-certs-pr/d365-functional-consultant-marketing.yml
+++ b/learn-certs-pr/d365-functional-consultant-marketing.yml
@@ -24,11 +24,11 @@ skills:
 - Настройка маркетинговых приложений
 - Управление сегментами и списками
 - Создание и управление маркетинговыми формами и страницами
-- Управление лидами
+- Управлять лидами, контактами и учетными записями
 - Создание и управление маркетинговыми электронными письмами
 - Управление перемещениями клиентов
 - Управление мероприятиями и вебинарами
-- Настройка и анализ ответов клиентов
+- Настраивать Dynamics 365 Customer Voice
 roles:
 - functional-consultant
 type: role-based
