--- a/learn-certs-pr/d365-functional-consultant-supply-chain-management.yml
+++ b/learn-certs-pr/d365-functional-consultant-supply-chain-management.yml
@@ -15,12 +15,13 @@ levels:
 skills:
 - Использование общих инструментов функциональности и внедрения
 - Настройка безопасности, процессов и параметров
-- Выполнение миграции данных
+- Управлять данными приложений Finance and Operations
 - Валидация и поддержка решений
 - Внедрение управления информацией о продукте
 - Внедрение управления запасами
-- Внедрение и управление процессами цепочки поставок
-- Внедрение управления складом и транспортировкой и выполнение бизнес-процессов
+- Реализовывать процессы логистических цепочек и управлять ими
+- Реализовывать управление складом и управление транспортировкой
+- Реализовывать сводное планирование
 roles:
 - functional-consultant
 type: role-based
