--- a/learn-certs-pr/exams/az-104.yml
+++ b/learn-certs-pr/exams/az-104.yml
@@ -6,7 +6,10 @@ metadata:
 uid: exam.az-104
 displayName: AZ-104
 summary: |-
+  <div>
   <div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong></font><br/><br/></div>
+  <div><strong>Содержание этого экзамена будет обновлено 24 ноября 2020 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменится.</strong><br/><br/></div>
+  </div>
 
   Кандидаты на этот экзамен должны обладать специальными знаниями по внедрению, управлению и мониторингу среды Microsoft Azure в организации.
 
@@ -32,6 +35,7 @@ locales:
 levels:
 - intermediate
 skills:
+- Содержание этого экзамена будет обновлено 24 ноября 2020 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменится.
 - Управление безопасностью и управления Azure (15-20%)
 - Внедрение и управление хранилищем (10-15%)
 - Развертывание и управление вычислительными ресурсами Azure (25-30%)
