--- a/learn-certs-pr/exams/az-300.yml
+++ b/learn-certs-pr/exams/az-300.yml
@@ -8,7 +8,7 @@ displayName: AZ-300
 summary: |-
   <div>
   <div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong></font><br/><br/></div>
-  <div><strong>Проведение этого экзамена на английском языке будет прекращено 30 сентября 2020 года. Взамен доступен, <a href="/learn/certifications/exams/az-303">AZ-303</a>, экзамен. Локализованные версии этого экзамена будут доступны до 30 октября 2020 года.</strong><br/><br/></div>
+  <div><strong>ЭТОТ ЭКЗАМЕН БЫЛ ОТМЕНЕН. Вместо него доступен новый экзамен AZ-303. Более подробную информацию можно найти на <a href="/learn/certifications/exams/az-303">странице сведений об экзамене AZ-303</a>.</strong><br/><br/></div>
   </div>
 
   Кандидаты на этот экзамен должны обладать специальными знаниями в области разработки и внедрения решений, работающих в Microsoft Azure, включая такие аспекты, как вычисления, сеть, хранилище и безопасность.
@@ -18,18 +18,10 @@ summary: |-
   Для реализации решений, архитекторы решений Azure сотрудничает с облачными администраторами, облачными администраторами баз данных и непосредственно с клиентами.
 
   Кандидат на этот экзамен должен обладать передовым опытом и знаниями по различным аспектам ИТ-операций, в том числе по сетям, виртуализации, идентификации, безопасности, непрерывности бизнеса, аварийному восстановлению, управлению данными, бюджетированию и управлению - эта роль подразумевает понимание того, как принятие решений в каждой области повлияет на общее решение. Кроме того, эта роль подразумевает квалификацию как минимум в одной из следующих областей знаний Azure: администрирование, разработка или DevOps.
-
-  <div><strong><br/>Примечание&#58; Вы получите сертификат эксперта по архитектуре <a href="/learn/certifications/azure-solutions-architect">Microsoft Certified&#58; Azure Solutions Architect Expert</a>, если сдадите одну из следующих комбинаций экзаменов&#58;<ul>
-  <li><a href="/learn/certifications/exams/az-300">AZ-300</a> и <a href="/learn/certifications/exams/az-301">AZ-301</a></li>
-  <li><a href="/learn/certifications/exams/az-303">AZ-303</a> и <a href="/learn/certifications/exams/az-304">AZ-304</a></li>
-  <li><a href="/learn/certifications/exams/az-300">AZ-300</a> и <a href="/learn/certifications/exams/az-304">AZ-304</a></li>
-  <li><a href="/learn/certifications/exams/az-301">AZ-301</a> и <a href="/learn/certifications/exams/az-303">AZ-303</a></li>
-  </ul></strong></div>
 subTitle: 'Этот экзамен предполагает проверку ваших способностей выполнять следующие технические задачи: развертывание и настройка инфраструктуры; внедрение рабочих нагрузок и безопасности; создание и развертывание приложений; внедрение аутентификации и защиты данных; и разработка для облачного хранилища и для службы хранилища Azure.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VzwB
 practiceTestUrl: https://us.mindhub.com/p/MU-AZ-300?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=AZ-300&examname=Exam%20AZ-300:%20Microsoft%20Azure%20Architect%20Technologies&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-300
 locales:
 - ja
 - zh-cn
@@ -37,12 +29,12 @@ locales:
 levels:
 - advanced
 skills:
-- Проведение этого экзамена на английском языке будет прекращено 30 сентября 2020 года. Взамен доступен, AZ-303, экзамен. Локализованные версии этого экзамена будут доступны до 30 октября 2020 года. Пожалуйста, загрузите документ с оцениваемыми навыками ниже, чтобы узнать подробную информацию об изменениях.
 - Развертывание и настройка инфраструктуры (40-45%)
 - Implement workloads and security (25-30%)
 - Внедрение рабочих нагрузок и безопасности (5-10%)
 - Внедрение аутентификации и защиты данных (5-10%)
 - Разработка для облачного хранилища и для службы хранилища Azure (15-20%)
+retirementDate: 09/30/2020
 roles:
 - solution-architect
 products:
