--- a/learn-certs-pr/exams/az-900.yml
+++ b/learn-certs-pr/exams/az-900.yml
@@ -8,7 +8,7 @@ displayName: AZ-900
 summary: |-
   <div>
   <div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong></font><br/><br/></div>
-  <div><strong>Выпуск нового экзамена OD, экзамена и соответствующего обучения перенесен с 15 сентября 2020 года на начало ноября. Пожалуйста, проверьте для получения дополнительной информации. Мы будем уверены, что вы получите уведомление не менее чем за 30 дней до публикации новой версии экзамена. </strong><br/><br/></div> 
+  <div><strong>Содержание этого экзамена будет обновлено 9 ноября 2020 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменится. </strong><br/><br/></div> 
   </div>
   
   Кандидаты на этот экзамен должны иметь базовые знания облачных служб и того, как эти службыы предоставляются в Microsoft Azure. Экзамен предназначен для кандидатов, которые только начинают работать с облачными решениями и сервисами или являются новичками в Azure.
@@ -38,6 +38,7 @@ locales:
 levels:
 - beginner
 skills:
+- Содержание этого экзамена будет обновлено 9 ноября 2020 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменится.
 - Описание облачных концепций (15-20%)
 - Описание основных служб Azure (30-35%)
 - Описание безопасности, конфиденциальности, соответствия и доверия (25-30%)
