--- a/learn-certs-pr/exams/mb-220.yml
+++ b/learn-certs-pr/exams/mb-220.yml
@@ -8,15 +8,15 @@ displayName: MB-220
 summary: |-
   <div>
   <div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong></font><br/><br/></div>
-  <div><strong>Содержание этого экзамена будет обновлено 7 октября 2020 года. Пожалуйста, загрузите документ оцениваемых навыков ниже, чтобы узнать об изменениях.</strong><br/><br/></div>
+  <div><strong>Содержание этого экзамена будет обновлено 10 ноября 2020 года. Пожалуйста, загрузите документ оцениваемых навыков ниже, чтобы узнать об изменениях.</strong><br/><br/></div>
   </div>
 
-  Кандидатами на этот экзамен являются функциональные консультанты Dynamics 365 по привлечению клиентов с опытом в маркетинге. Кандидаты отвечают за внедрение решений, которые привлекают и конвертируют лидов, повышают узнаваемость бренда, стандартизируют многоканальный обмен сообщениями и предоставляют маркетинговые идеи.
+  Кандидаты на этот экзамен являются консультантами по функциональным возможностям Dynamics 365 Marketing. Кандидаты отвечают за реализацию решений, которые привлекают и конвертируют лидов, повышают уровень узнаваемости бренда, стандартизируют ведение коммуникации по различным каналам и предоставляют маркетинговую информацию.
 
   Кандидаты несут ответственность за настройку и расширение основного маркетингового приложения, чтобы включить в него маркетинг по электронной почте, настройку, интерактивные поездки клиентов, "обработка" лидов с персонализированным опытом, интеграция с LinkedIn, мероприятия, Опросы, целевые страницы, сегментация и оценка, а также соблюдение Генерального регламента о защите персональных данных (GDPR).
 
-  Кандидаты должны иметь некоторое представление о принципах маркетинга и роли маркетингового приложения в отношении набора приложений Dynamics 365, включая интеграцию с приложениями Dynamics 365 и Office 365. Кандидаты должны понимать отраслевую терминологию, приоритеты, общие инициативы, стандарты, методологии и лучшие практики.
-subTitle: 'Этот экзамен позволяет оценить вашу способность выполнять следующие технические задачи: настройка маркетинговых приложений; управление сегментами и списками; создание и управление маркетинговыми формами и страницами; управление интересами; создание и управление маркетинговыми электронными письмами; управление поездками клиентов; управление мероприятиями и вебинарами; настройка и анализ ответов клиентов.'
+  Кандидаты должны обладать знаниями о принципах маркетинга и роли маркетинговых приложений применительно к набору приложений Dynamics 365, включая интеграцию с приложениями Dynamics 365 и Microsoft 365.
+subTitle: 'Этот экзамен измеряет вашу способность выполнять следующие технические задачи: настраивать маркетинговые приложения; управлять сегментами и списками; создавать маркетинговые формы и страницы и управлять ими; управлять лидами, контактами и учетными записями; создавать маркетинговые электронные письма и управлять ими; управлять циклом взаимодействия с клиентом; управлять событиями и вебинарами; настраивать Dynamics 365 Customer Voice.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VUjQ
 practiceTestUrl: https://in.mindhub.com/mb-220-microsoft-dynamics-365-marketing-microsoft-official-practice-test/p/MU-MB-220?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
@@ -26,15 +26,15 @@ locales:
 levels:
 - intermediate
 skills:
-- Содержание этого экзамена будет обновлено 7 октября 2020 года. Пожалуйста, скачайте список навыков, оцениваемых на экзамене, ниже, чтобы увидеть, что меняется.
-- Настройка маркетинговых приложений (5-10%)
-- Управление сегментами и списками (10-15%)
+- Содержание этого экзамена будет обновлено 10 ноября 2020 года. Пожалуйста, скачайте список навыков, оцениваемых на экзамене, ниже, чтобы увидеть, что меняется.
+- Настройка маркетинговых приложений (20-25%)
+- Управление сегментами и списками (5-10%)
 - Создание и управление маркетинговыми формами и страницами (10-15%)
-- Управление лидами (10-15%)
-- Создание и управление маркетинговыми электронными письмами (10-15%)
-- Управление перемещениями клиентов (15-20%)
-- Управление мероприятиями и вебинарами (10-15%)
-- Настройка и анализ ответов клиентов (10-15%)
+- Управление лидами, контактами и учетными записями (10-15%)
+- Создание и управление маркетинговыми электронными письмами (5-10%)
+- Управление перемещениями клиентов (10-15%)
+- Управление мероприятиями и вебинарами (5-10%)
+- Настройка Dynamics 365 Customer Voice (10-15%)
 roles:
 - functional-consultant
 products:
@@ -55,7 +55,7 @@ relatedCertifications:
 resources:
 - title: Обучение для получения сертификата
   description: Рекомендуемые учебные ресурсы, которые помогут вам подготовиться к обязательным экзаменам и получить сертификат.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4C55m
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CfjW
 - title: Руководство по образовательным курсам и сертификациям
   description: Изучите все сертификаты в кратком руководстве по обучению и сертификации.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
