--- a/learn-certs-pr/exams/mb-240.yml
+++ b/learn-certs-pr/exams/mb-240.yml
@@ -8,15 +8,15 @@ displayName: MB-240
 summary: |-
   <div>
   <div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong></font><br/><br/></div>
-  <div><strong>Содержание этого экзамена будет обновлено 7 октября 2020 года. Пожалуйста, загрузите документ оцениваемых навыков ниже, чтобы узнать об изменениях.</strong><br/><br/></div>
+  <div><strong>Содержание этого экзамена будет обновлено 10 ноября 2020 года. Пожалуйста, загрузите документ оцениваемых навыков ниже, чтобы узнать об изменениях.</strong><br/><br/></div>
   </div>
 
-  Кандидатами на этот экзамен являются функциональные консультанты Microsoft Dynamics 365 по привлечению клиентов с опытом в обслуживании на местах. Кандидаты отвечают за реализацию решений, управляющих ресурсами, которые завершают жизненный цикл обслуживания на местах.
+  Кандидаты на этот экзамен являются консультантами по функциональным возможностям Dynamics 365 Customer Engagement со знанием Field Service. Кандидаты отвечают за реализацию решений, которые управляют ресурсами, которые дополняют жизненный цикл выездного обслуживания.
 
-  Кандидаты осуществляют процессы обслуживания на местах, разработанные в сотрудничестве с внутренними и внешними командами специалистов. Это сотрудничество включает в себя настройку стандартных областей администрирования приложения для обслуживания на местах, развертывание решения Connected Field Service (IoT) и мобильного приложения, а также реализацию любых дополнительных необходимых изменений по запросу. Кандидаты отвечают за настройку и развертывание приложения обслуживания на местах совместно с основным приложением обслуживания клиентов.
+  Кандидаты реализуют процессы выездного обслуживания, разработанные в сотрудничестве со внутренними и внешними командами. Такое сотрудничество включает настройку областей администрирования по умолчанию приложения Field Service, развертывание решения Connected Field Service (IoT) и мобильного приложения, а также реализацию любых дополнительных требуемых настроек. Кандидаты отвечают за настройку и развертывание приложения Field Service в сопряжении с основным приложением для обслуживания клиентов.
 
   Кандидаты должны иметь знания о настройке и изменении компонентов приложения обслуживания на местах, включая настройку служб, ресурсов, характеристик, инцидентов, интеграции запасов, соглашения об обслуживании, планирование ресурсов, рабочие задания, задачи обслуживания, роли пользователей при обслуживании на местах, настройки обслуживания на местах, решение Connected Field Service (IoT) и настройка мобильного приложения обслуживания на местах.
-subTitle: 'Данный экзамен позволяет оценить вашу способность выполнять перечисленные ниже технические задачи: настройка приложений обслуживания на местах; управление заказами на работу; планирование и диспетчеризация заказов на работу; управление мобильностью обслуживания на местах; управление запасами и закупками; управление активами и соглашениями.'
+subTitle: 'Этот экзамен измеряет вашу способность выполнять следующие технические задачи: настраивать приложения для выездного обслуживания; управлять заказами на выполнение работ; планировать и готовить к отправке заказы на выполнение работ; управлять мобильностью выездного обслуживания; управлять запасами и покупками; реализовывать Connected Field Service.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3Vzxi
 practiceTestUrl: https://in.mindhub.com/mb-240-microsoft-dynamics-365-field-service-microsoft-official-practice-test/p/MU-MB-240?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
@@ -26,13 +26,13 @@ locales:
 levels:
 - intermediate
 skills:
-- Содержание этого экзамена будет обновлено 7 октября 2020 года. Пожалуйста, скачайте список навыков, оцениваемых на экзамене, ниже, чтобы увидеть, что меняется.
-- Настройка приложений обслуживания на местах (20-25%)
+- Содержание этого экзамена будет обновлено 10 ноября 2020 года. Пожалуйста, скачайте список навыков, оцениваемых на экзамене, ниже, чтобы увидеть, что меняется.
+- Настройка приложений для выездного обслуживания (15-20%)
 - Управление заказами на выполнение работ (15-20%)
-- Планирование и диспетчеризации заказов на выполнение работ (20-25%)
+- Планирование и подготовка к отправке заказов на выполнение работ (25-30%)
 - Управление мобильностью обслуживания на местах (10-15%)
-- Управление запасами и закупками (10-15%)
-- Управление активами и соглашениями (10-15%)
+- Управление запасами и покупками (5-10%)
+- Реализация Connected Field Service (10-15%)
 roles:
 - functional-consultant
 products:
@@ -51,7 +51,7 @@ relatedCertifications:
 resources:
 - title: Обучение для получения сертификата
   description: Рекомендуемые учебные ресурсы, которые помогут вам подготовиться к обязательным экзаменам и получить сертификат.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4C7Ft
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4C56X
 - title: Руководство по образовательным курсам и сертификациям
   description: Изучите все сертификаты в кратком руководстве по обучению и сертификации.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
