--- a/learn-certs-pr/exams/mb-300.yml
+++ b/learn-certs-pr/exams/mb-300.yml
@@ -8,16 +8,16 @@ displayName: MB-300
 summary: |-
   <div>
   <div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong></font><br/><br/></div>
-  <div><strong>Содержание этого экзамена будет обновлено 16 октября 2020 года. Пожалуйста, загрузите документ оцениваемых навыков ниже, чтобы узнать об изменениях.</strong><br/><br/></div>
+  <div><strong>Содержание этого экзамена было обновлено 16 октября 2020 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.</strong><br/><br/></div>
   </div>
 
-  Кандидатами на этот экзамен являются Функциональные консультанты, которые анализируют бизнес-требования и переводят эти требования в полностью готовые бизнес-процессы и решения, которые реализуют лучшие практики в отрасли. Кандидаты служат ключевым ресурсом при реализации и настройке приложений для соблюдения бизнес-требований.
-  <br/>
+  Кандидаты на этот экзамен анализируют бизнес-требования и создают на основе этих требований полностью осуществляемые бизнес-процессы и решения, которые реализуют лучшие в области практики. Кандидаты служат в качестве основного ресурса во время реализации и настройки приложений для выполнения бизнес-требований.
+  <br/> 
 
-  Кандидаты на этот экзамен обладают фундаментальным пониманием принципов бухгалтерского учета и финансовых операций предприятий, обслуживания клиентов, обслуживания на месте, производства, розничной торговли и концепций управления цепочками поставок.
+  Кандидаты понимают стандартные функции и возможности приложений Finance and Operations, как настраивать и использовать каждое такое приложение. Кандидаты также должны быть осведомлены о том, как интегрировать приложения Finance and Operations с внешними системами и инструментами, включая платформу Power. Кандидаты активно управляют жизненными циклами приложений посредством использования Lifecycle Services (LCS) и других инструментов и платформ Microsoft.
 
-  Кандидаты на этот экзамен обычно специализируются на одном или нескольких наборах функций Microsoft Dynamics 365 Finance and Operations, включая управление финансами, производством и цепочками поставок.
-subTitle: 'Данный экзамен позволяет оценить вашу способность выполнять перечисленные ниже технические задачи: использование общих инструментов функциональности и внедрения; настройка безопасности, процессов и параметров; выполнение миграции данных; и валидация и поддержка решений.'
+  Кандидаты на этот экзамен обычно специализируются на одном или нескольких наборах функций приложений Finance and Operations, включая финансы, производство и управление логистическими цепочками.
+subTitle: 'Этот экзамен измеряет вашу способность выполнять следующие технические задачи: использовать стандартные функции и инструменты реализации; настраивать безопасность, процессы и варианты; управлять данными Finance and Operation; проверять и поддерживать решение.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VP8B
 practiceTestUrl: https://www.mindhub.com/p/MU-MB-300?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
@@ -28,10 +28,10 @@ locales:
 levels:
 - intermediate
 skills:
-- Содержание этого экзамена будет обновлено 16 октября 2020 года. Пожалуйста, скачайте список навыков, оцениваемых на экзамене, ниже, чтобы увидеть, что меняется.
-- Использование общих инструментов функциональности и внедрения (20-25%)
-- Настройка безопасности, процессов и параметров (45-50%)
-- Выполнение миграции данных (15-20%)
+- Содержание этого экзамена было обновлено 16 октября 2020 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменилось.
+- Использование стандартных функций и инструментов реализации (15-20%)
+- Настройка безопасности, процессов и вариантов (30-35%)
+- Управление данными Finance and Operations (25-30%)
 - Валидация и поддержка решений (15-20%)
 roles:
 - functional-consultant
