--- a/learn-certs-pr/exams/mb-310.yml
+++ b/learn-certs-pr/exams/mb-310.yml
@@ -8,19 +8,13 @@ displayName: MB-310
 summary: |-
   <div>
   <div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong></font><br/><br/></div>
-  <div><strong>Содержание этого экзамена будет обновлено 16 октября 2020 года. Пожалуйста, загрузите документ оцениваемых навыков ниже, чтобы узнать об изменениях.</strong><br/><br/></div>
+  <div><strong>Содержание этого экзамена было обновлено 16 октября 2020 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.</strong><br/><br/></div>
   </div>
 
-  Кандидатами на этот экзамен являются Функциональные консультанты, которые анализируют бизнес-требования и переводят эти требования в полностью готовые бизнес-процессы и решения, которые реализуют лучшие практики в отрасли. Кандидаты служат ключевым ресурсом при реализации и настройке приложений для соблюдения бизнес-требований.
-  <br/>
+  Кандидаты на этот экзамен являются консультантами по функциональным возможностям, которые анализируют бизнес-требования и создают на основе этих требований полностью осуществляемые бизнес-процессы и решения, которые реализуют лучшие в области практики. Кандидаты служат в качестве основного ресурса во время реализации и настройки приложений для выполнения бизнес-требований.
 
-  Кандидаты на этот экзамен обладают фундаментальным пониманием принципов бухгалтерского учета и финансовых операций предприятий, обслуживания клиентов, обслуживания на месте, производства, розничной торговли и концепций управления цепочками поставок.
-  <br/>
-
-  Кандидаты на этот экзамен обычно специализируются на одном или нескольких наборах функций Microsoft Dynamics 365 Finance, включая управление финансами, производством и цепочками поставок.
-
-  Кандидаты должны обладать знаниями об основных принципах и практиках бухгалтерского учета.
-subTitle: 'Этот экзамен позволяет оценить вашу способность выполнять следующие технические задачи: установка и настройка финансового управления; управление и применение общих процессов; внедрение и управление кредиторской и дебиторской задолженностью; управление бюджетированием и основными средствами.'
+  Кандидаты на этот экзамен должны обладать фундаментальным пониманием учетных политик и финансовых операций бизнесов, включая кредиторскую задолженность и дебиторскую задолженность, налоги, принципы учета затрат, основные средства и бюджетирование.
+subTitle: 'Этот экзамен измеряет вашу способность выполнять следующие технические задачи: настраивать управление финансами; реализовывать кредиторскую задолженность и затраты и управлять ими; реализовывать дебиторскую задолженность, кредит, сборы и признание дохода; управлять бюджетированием и основными средствами.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VEHU
 scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=MB-310&examname=Exam%20MB-310:%20Microsoft%20Dynamics%20365%20for%20Finance%20and%20Operations,%20Financials&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-310
@@ -29,11 +23,11 @@ locales:
 levels:
 - intermediate
 skills:
-- Содержание этого экзамена будет обновлено 16 октября 2020 года. Пожалуйста, скачайте список навыков, оцениваемых на экзамене, ниже, чтобы увидеть, что меняется.
-- Установка и настройка финансового управления (35-40%)
-- Управление и применение общих процессов (20-25%)
-- Внедрение и управление кредиторской и дебиторской задолженностью (20-25%)
-- Управление бюджетированием и основными средствами (15-20%)
+- Содержание этого экзамена было обновлено 16 октября 2020 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменилось.
+- Настройка управления финансами (50-55%)
+- Реализация кредиторской задолженности и расходов и управление ими (10-15%)
+- Реализация дебиторской задолженности, кредита, сборов и признания дохода (20-25%)
+- Управление бюджетированием и основными средствами (10-15%)
 roles:
 - functional-consultant
 products:
@@ -56,8 +50,8 @@ relatedCertifications:
     uid: certification.d365-functional-consultant-financials
 resources:
 - title: Обучение для получения сертификата
-  description: Рекомендуемые учебные ресурсы, которые помогут вам подготовиться к обязательным экзаменам и получить сертификат.'
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcRF
+  description: 'Рекомендуемые учебные ресурсы, которые помогут вам подготовиться к обязательным экзаменам и получить сертификат.'
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4C56Y
 - title: Руководство по образовательным курсам и сертификациям
   description: Изучите все сертификаты в кратком руководстве по обучению и сертификации.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
