--- a/learn-certs-pr/exams/mb-320.yml
+++ b/learn-certs-pr/exams/mb-320.yml
@@ -8,19 +8,19 @@ displayName: MB-320
 summary: |-
   <div>
   <div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong></font><br/><br/></div>
-  <div><strong>Содержание этого экзамена будет обновлено 16 октября 2020 года. Пожалуйста, загрузите документ оцениваемых навыков ниже, чтобы узнать об изменениях.</strong><br/><br/></div>
+  <div><strong>Содержание этого экзамена было обновлено 16 октября 2020 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.</strong><br/><br/></div>
   </div>
 
-  Кандидатами на этот экзамен являются Функциональные консультанты, которые анализируют бизнес-требования и переводят эти требования в полностью готовые бизнес-процессы и решения, которые реализуют лучшие практики в отрасли. Кандидаты служат ключевым ресурсом при реализации и настройке приложений для соблюдения бизнес-требований.
+  Кандидаты на этот экзамен являются консультантами по функциональным возможностям, которые анализируют бизнес-требования и создают на основе этих требований полностью осуществляемые бизнес-процессы и решения, которые реализуют лучшие в области практики. Кандидаты служат в качестве основного ресурса во время реализации и настройки приложений для выполнения бизнес-требований.
   <br/>
 
   Кандидаты на этот экзамен обладают фундаментальным пониманием принципов бухгалтерского учета и финансовых операций предприятий, обслуживания клиентов, обслуживания на месте, производства, розничной торговли и концепций управления цепочками поставок.
   <br/>
 
-  Кандидаты на этот экзамен обычно специализируются на одном или нескольких наборах функций Microsoft Dynamics 365 Finance, включая управление финансами, производством и цепочками поставок.
+  Кандидаты на этот экзамен обычно специализируются на одном или нескольких наборах функций Finance and Operations, включая финансы, производство и управление логистическими цепочками.
 
-  Кандидаты должны обладать знаниями об основных принципах и практиках бухгалтерского учета.
-subTitle: 'Этот экзамен позволяет оценить вашу способность выполнять следующие технические задачи: установка и настройка производства; создание и управление производственными и экономичными заказами; создание, обработка и управление производственными групповыми заказами.'
+  Кандидаты должны обладать некоторыми знаниями производственных практик.
+subTitle: 'Этот экзамен измеряет вашу способность выполнять следующие технические задачи: настраивать Dynamics 365 Supply Chain Management, Manufacturing; управлять процессами производства; реализовывать сводное планирование для производства; реализовывать другие производственные функции.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VwVs
 scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=MB-320&examname=Exam%20MB-320:%20Microsoft%20Dynamics%20365%20for%20Finance%20and%20Operations,%20Manufacturing&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-320
@@ -29,10 +29,11 @@ locales:
 levels:
 - intermediate
 skills:
-- Содержание этого экзамена будет обновлено 16 октября 2020 года. Пожалуйста, скачайте список навыков, оцениваемых на экзамене, ниже, чтобы увидеть, что меняется.
-- Установка и настройка производства (30-35%)
-- Создание и управление производственными и экономичными заказами (25-30%)
-- Создание, обработка и управление производственными групповыми заказами (40-45%)
+- Содержание этого экзамена было обновлено 16 октября 2020 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменилось.
+- Настройка Dynamics 365 Supply Chain Management, Manufacturing (35-40%)
+- Управление производственными процессами (20-25%)
+- Реализация сводного планирования для производства (10-15%)
+- Реализация других производственных функций (15-20%)
 roles:
 - functional-consultant
 products:
@@ -53,7 +54,7 @@ relatedCertifications:
 resources:
 - title: Обучение для получения сертификата
   description: Рекомендуемые учебные ресурсы, которые помогут вам подготовиться к обязательным экзаменам и получить сертификат.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcRH
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CkBE
 - title: Руководство по образовательным курсам и сертификациям
   description: Изучите все сертификаты в кратком руководстве по обучению и сертификации.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
