--- a/learn-certs-pr/courses/ai-100t01.yml
+++ b/learn-certs-pr/courses/ai-100t01.yml
@@ -30,10 +30,20 @@ summary: |-
   #### Профиль аудитории
   Этот курс предназначен для архитекторов облачных решений, а также для проектировщиков искусственного интеллекта Azure и разработчиков ИИ.
 prerequisitesSection: |-
-  Перед посещением этого курса студенты должны иметь&#58;
-  - Azure Fundamentals
-  - Понимание технологий хранилища Azure
-  - Знание C#
+  Успешные инженеры ИИ Azure начинают эту роль с профессиональным опытом работы с облачными технологиями и опытом работы с пакетами средств разработки.  
+  
+  В частности&#58;
+  - Реализация решений на C# или Python.
+  - Разработка решения в облаке.
+  - Понимание технологий хранения Azure.  
+
+  Для приобретения необходимых предварительных навыков перед прохождением курса пройдите следующее бесплатное онлайн-обучение&#58;
+  - [«Обзор облачных концепций Microsoft Azure»](/learn/paths/explore-microsoft-azure-cloud-concepts/),
+  - [«Первые шаги с C#»](/learn/paths/csharp-first-steps/) или [«Первые шаги с Python»](/learn/paths/python-first-steps/),
+  - [«Основные облачные службы&#58; знакомство с Azure»](/learn/modules/welcome-to-azure/),
+  - [«Основные облачные службы&#58; варианты вычислений Azure»](/learn/modules/intro-to-azure-compute/).
+  
+  Если вы только начинаете знакомиться со службами ИИ Azure, пожалуйста, сначала пройдите курс [«Основы ИИ Microsoft Azure»](/learn/certifications/azure-ai-fundamentals).
 outlineSection: |-
   ### Модуль 1&#58; Введение в Azure Cognitive Services
   Этот модуль посвящен возможностям когнитивных служб Cognitive Services в Microsoft Azure и их роли в разработке решений для искусственного интеллекта.
