--- a/learn-certs-pr/courses/dp-200t01.yml
+++ b/learn-certs-pr/courses/dp-200t01.yml
@@ -37,8 +37,18 @@ summary: |-
   #### Профиль аудитории
   Основная аудитория этого курса - специалисты по данным, архитекторы данных и специалисты по бизнес-аналитике, которые хотят узнать о технологиях платформы данных, существующих в Microsoft Azure. Вторичной аудиторией этого курса являются люди, разрабатывающие приложения, которые доставляют контент из технологий платформы данных, существующих в Microsoft Azure.
 prerequisitesSection: |-
-  В дополнение к имеющемуся профессиональному опыту, слушатели данного курса должны обладать техническими знаниями, эквивалентными следующим курсам&#58;
-  - [Azure Fundamentals](https://docs.microsoft.com/en-us/learn/modules/welcome-to-azure/)
+  Успешные учащиеся начинают этот курс со знаниями понятий облачных вычислений и профессиональным опытом работы с решениями для работы с данными. 
+  
+  В частности&#58;
+  - Создание облачных ресурсов на Microsoft Azure.
+  - Определение вариантов использования больших данных.
+  - Понимание того, как службы облачных вычислений могут служить для удовлетворения типичных потребностей бизнеса. 
+  
+  Для приобретения необходимых предварительных навыков перед прохождением курса пройдите следующее бесплатное онлайн-обучение&#58;
+  - [«Обзор облачных концепций Microsoft»](/learn/paths/explore-microsoft-azure-cloud-concepts/)
+  - [«Определение задач инженера данных»](/learn/modules/data-engineering-processes/)
+  - [«Основные облачные службы: варианты хранения данных Azure»](/learn/modules/intro-to-data-in-azure/)
+  - [«Основные облачные службы: варианты вычислений Azure»](/learn/modules/intro-to-azure-compute/)
 outlineSection: |-
   ### Модуль 1&#58; Azure для инженера данных
   Этот модуль посвящен изучению развития мира данных и тому, как технологии облачных платформ данных предоставляют предприятиям новые возможности для исследования своих данных различными способами. Слушателям будет представлен обзор различных доступных технологий платформ данных и того, как изменились роль и обязанности инженера данных в современных организациях.
