--- a/learn-certs-pr/courses/dp-201t01.yml
+++ b/learn-certs-pr/courses/dp-201t01.yml
@@ -35,9 +35,18 @@ summary: |-
   #### Профиль аудитории
   Аудитория этого курса - специалисты по данным, архитекторы данных и специалисты по бизнес-аналитике, которые хотят узнать о технологиях платформы данных, существующих в Microsoft Azure. Вторичной аудиторией этого курса являются люди, разрабатывающие приложения, которые доставляют контент из технологий платформы данных, существующих в Microsoft Azure.
 prerequisitesSection: |-
-  В дополнение к имеющемуся профессиональному опыту, слушатели данного курса должны обладать техническими знаниями, эквивалентными следующим курсам&#58;
-  - [Azure Fundamentals](https://docs.microsoft.com/en-us/learn/modules/welcome-to-azure/)
-  - DP-200&#58; Внедрение решения для данных Azure Data Solution
+  Успешные учащиеся начинают этот курс со знаниями понятий облачных вычислений и профессиональным опытом работы с решениями для работы с данными. 
+  
+  В частности&#58;
+  - Создание облачных ресурсов на Microsoft Azure.
+  - Определение вариантов использования больших данных.
+  - Понимание того, как службы облачных вычислений могут служить для удовлетворения типичных потребностей бизнеса.
+  
+  Для приобретения необходимых предварительных навыков перед прохождением курса пройдите следующее бесплатное онлайн-обучение&#58;
+  - [«Обзор облачных концепций Microsoft»](/learn/paths/explore-microsoft-azure-cloud-concepts/)
+  - [«Определение задач инженера данных»](/learn/modules/data-engineering-processes/)
+  - [«Основные облачные службы: варианты хранения данных Azure»](/learn/modules/intro-to-data-in-azure/)
+  - [«Основные облачные службы: варианты вычислений Azure»](/learn/modules/intro-to-azure-compute/)
 outlineSection: |-
   ### Модуль 1&#58; Особенности архитектуры платформы данных
   В этом модуле слушатели узнают, как проектировать и создавать безопасные, масштабируемые и эффективные решения в Azure, изучая основные принципы, заложенные в каждой хорошей архитектуре. Они узнают, как использование ключевых принципов в архитектуре, независимо от выбора технологии, может помочь в проектировании, создании и постоянном улучшении архитектуры для организации.
