--- a/learn-certs-pr/exams/az-303.yml
+++ b/learn-certs-pr/exams/az-303.yml
@@ -6,7 +6,10 @@ metadata:
 uid: exam.az-303
 displayName: AZ-303
 summary: |-
+  <div>
   <div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong></font><br/><br/></div>
+  <div><strong>Содержание этого экзамена будет обновлено 24 ноября 2020 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменится.</strong><br/><br/></div>
+  </div>
 
   Кандидаты на этот экзамен должны обладать специальными знаниями в области разработки и внедрения решений, работающих в Microsoft Azure, включая такие аспекты, как вычисления, сеть, хранилище и безопасность.
 
@@ -22,9 +25,13 @@ practiceTestUrl: https://www.mindhub.com/p/MU-AZ-303?utm_source=microsoft&utm_me
 scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=AZ-303&examname=Exam%20AZ-303:%20Microsoft%20Azure%20Architect%20Technologies&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-303
 locales:
 - en
+- ja
+- zh-cn
+- ko
 levels:
 - advanced
 skills:
+- Содержание этого экзамена будет обновлено 24 ноября 2020 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменится.
 - Внедрение и контроль инфраструктуры Azure (50-55%)
 - Внедрение решений по управлению и безопасности (25-30%)
 - Внедрение решений для приложений (10-15%)
