--- a/learn-certs-pr/exams/mb-330.yml
+++ b/learn-certs-pr/exams/mb-330.yml
@@ -8,18 +8,16 @@ displayName: MB-330
 summary: |-
   <div>
   <div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong></font><br/><br/></div>
-  <div><strong>Содержание этого экзамена будет обновлено 16 октября 2020 года. Пожалуйста, загрузите документ оцениваемых навыков ниже, чтобы узнать об изменениях.</strong><br/><br/></div>
+  <div><strong>Содержание этого экзамена было обновлено 16 октября 2020 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.</strong><br/><br/></div>
   </div>
 
-  Кандидатами на этот экзамен являются Функциональные консультанты, которые анализируют бизнес-требования и переводят эти требования в полностью готовые бизнес-процессы и решения, которые реализуют лучшие практики в отрасли. Кандидаты служат ключевым ресурсом при реализации и настройке приложений для соблюдения бизнес-требований.
+  Кандидаты на этот экзамен анализируют бизнес-требования и создают на основе этих требований полностью осуществляемые бизнес-процессы и решения, которые реализуют лучшие в области практики. Кандидаты служат в качестве основного ресурса во время реализации и настройки приложений для выполнения бизнес-требований.
   <br/>
 
-  Кандидаты на этот экзамен обладают фундаментальным пониманием принципов бухгалтерского учета и финансовых операций предприятий, обслуживания клиентов, обслуживания на месте, производства, розничной торговли и концепций управления цепочками поставок.
-
-  Кандидаты на этот экзамен обычно специализируются на одном или нескольких наборах функций Microsoft Dynamics 365 Finance, включая управление финансами, производством и цепочками поставок.
+  Кандидаты на этот экзамен обладают фундаментальным пониманием учетных политик и финансовых операций бизнесов, понятий обслуживания клиентов, выездного обслуживания, производства, розничной торговли и управления логистическими цепочками. Кандидаты на этот экзамен обычно специализируются на одном или нескольких наборах функций приложений Finance and Operations, включая финансы, производство и управление логистическими цепочками.
 
   Кандидаты должны иметь некоторые знания о практике управления цепочками поставок, включая закупки, торговлю, логистику, управление складами и управление перевозками.
-subTitle: 'Этот экзамен позволяет оценить вашу способность выполнять следующие технические задачи: осуществлять управление информацией о продукте; осуществлять управление запасами; внедрять и управлять процессами цепочки поставок; осуществлять управление складом и транспортом; и выполнять бизнес-процессы.'
+subTitle: 'Этот экзамен измеряет вашу способность выполнять следующие технические задачи: реализовывать управление информацией о продуктах; реализовывать управление запасами; реализовывать процессы логистических цепочек и управлять ими; реализовывать управление складом и транспортировкой; реализовывать сводное планирование.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VwVt
 scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=MB-330&examname=Exam%20MB-330:%20Microsoft%20Dynamics%20365%20for%20Finance%20and%20Operations,%20Supply%20Chain%20Management&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-330
@@ -28,11 +26,12 @@ locales:
 levels:
 - intermediate
 skills:
-- Содержание этого экзамена будет обновлено 16 октября 2020 года. Пожалуйста, скачайте список навыков, оцениваемых на экзамене, ниже, чтобы увидеть, что меняется.
-- Внедрение управления информацией о продукте (25-30%)
-- Внедрение управления запасами (20-25%)
-- Внедрение и управление процессами цепочки поставок (25-30%)
-- Внедрение управления складом и транспортировкой и выполнение бизнес-процессов (25-30%)
+- Содержание этого экзамена было обновлено 16 октября 2020 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменилось.
+- Внедрение управления информацией о продукте (20-25%)
+- Внедрение управления запасами (15-20%)
+- Внедрение и управление процессами цепочки поставок (15-20%)
+- Внедрение управления складом и транспортировкой (20-25%)
+- Реализация сводного планирования (15-20%)
 roles:
 - functional-consultant
 products:
@@ -54,7 +53,7 @@ relatedCertifications:
 resources:
 - title: Обучение для получения сертификата
   description: Рекомендуемые учебные ресурсы, которые помогут вам подготовиться к обязательным экзаменам и получить сертификат.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CfjF
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4Ca9S
 - title: Руководство по образовательным курсам и сертификациям
   description: Изучите все сертификаты в кратком руководстве по обучению и сертификации.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
