--- a/learn-certs-pr/exams/ms-203.yml
+++ b/learn-certs-pr/exams/ms-203.yml
@@ -6,7 +6,10 @@ metadata:
 uid: exam.ms-203
 displayName: MS-203
 summary: |-
+  <div>
   <div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
+  <div><strong>Содержание этого экзамена будет обновлено 24 ноября 2020 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменится.</strong><br/><br/></div>
+  </div>
 
   Кандидатами на этот экзамен являются Администраторы обмена сообщениями, которые развертывают, настраивают, управляют и отслеживают получателей, разрешения, защиту почты, поток почты и общие папки в гибридных и облачных корпоративных средах, а также устраняют связанные со всем этим неполадки.
 
@@ -18,12 +21,14 @@ summary: |-
 subTitle: 'Этот экзамен измеряет вашу способность выполнять следующие технические задачи: управлять организационными настройками и ресурсами; планировать почтовую архитектуру и управлять ею, планировать и реализовывать гибридную конфигурацию и миграцию, а также защитить среду обмена сообщениями.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4xqnc
+practiceTestUrl: https://in.mindhub.com/ms-203-microsoft-365-messaging-microsoft-official-practice-test/p/MU-MS-203?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
 scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=MS-203&examname=Exam%20MS-203:%20Microsoft%20365%20Messaging&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fms-203
 locales:
 - en
 levels:
 - intermediate
 skills:
+- Содержание этого экзамена будет обновлено 24 ноября 2020 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменится.
 - Управление организационными настройками и ресурсами (30-35%)
 - Планирование и управление почтовой архитектурой (20-25%)
 - Планирование и внедрение гибридной конфигурации и миграции (20-25%)
