--- a/learn-certs-pr/microsoft-certified-educator.yml
+++ b/learn-certs-pr/microsoft-certified-educator.yml
@@ -33,13 +33,13 @@ pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4vHl
 exams:
 - uid: exam.62-193
 resources:
-- title: Проект по инновационному обучению Innovative Teaching and Learning (ITL)
-  description: Проект по инновационному обучению Innovative Teaching and Learning (ITL)
-  href: https://education.microsoft.com/GetTrained/ITL-Research
+- title: Образовательный центр Microsoft
+  description: Обучение, программы и ресурсы для преподавателей
+  href: https://education.microsoft.com/ru-ru
 - title: Учебно-методическое пособие
   description: Поиск учебных материалов для подготовки к экзамену
-  href: http://aka.ms/MCEStudyGuide
+  href: https://aka.ms/MCEStudyGuide
 - title: Exam Replay
   description: Набор материалов в электронном виде для компании Teach the Future Now (плакат, рекламный проспект и предметная область знаний для экзамена MCE)
-  href: http://aka.ms/MCEAssets
+  href: https://aka.ms/MCEAssets
 
